--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Hello Beatifull World<h1/>
+	<!DOCTYPE html>
+	<html lang="en">
+	<head>
+		<meta charset="UTF-8">
+		<title>Hello</title>
+		<link rel="stylesheet" href="assets/styles/main.css"  type="text/css"/>
+	</head>
+	<body>
+		<h1>Hello Beatifull World<h1/>
+	</body>
+	
+	</html>
