--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
 		<meta charset="UTF-8">
 		<title>Hello</title>
 		<link rel="stylesheet" href="assets/styles/main.css"  type="text/css"/>
+		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
+
 		<h1>Hello Beatifull World<h1/>
 	</body>
-	
+
+	<script src="assets/javascript/main.js"></script>
+
 	</html>
