aside and content

--- a/index.html
+++ b/index.html
@@ -7,8 +7,22 @@
 		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
+			<hr>
+<div class="main">
+	<div class="main_aside">После почти равных выборов 1800 года Томас Джефферсон постоянно увеличивал свою популярность. Американская торговля процветала благодаря временному прекращению революционных войн во Франции.</div>
+	<div class="main_content">Президентские выборы в США 1804 года были первыми президентскими выборами США после принятия Двенадцатой поправки к Конституции. Президент Томас Джефферсон, представлявший демократическо-республиканскую партию, легко одержал победу над Чарльзом Пинкни от федералистов. Джордж Клинтон был избран вице-президентом. Согласно Двенадцатой поправке выборщики от штатов должны были голосовать отдельно за президента и баллотирующегося с ним вице-президента.</div>
+		<hr>
+</div>
+<div>
+		<div class="aside">самки – 18–22 мм. Гусеницы последнего возраста достигают в длину 20–27 мм. Голова тёмно-жёлтая, переднегрудной щит жёлтый. Тело светло-жёлтое, после зимовки сероватое. Вдоль тела проходят 5 узких серо-коричневых полосок.</div>
+		<div class="content">Голова и грудь беловатые, с лёгким коричневым оттенком и небольшой примесью коричневых чешуек. У астраханской популяции усики бабочек самцов и самок без ресничек, короткие, не превышают длины половины переднего крыла[2]. Щупики относительно длинные, более или менее прямые, торчащие вперед. Передние крылья умеренной ширины, со слегка заострённой вершиной. У самцов они серовато-коричневые с четырьмя тёмными пятнышками наискось в средней части крыла. У некоторых бабочек эти пятнышки плохо заметны или отсутствуют. Вдоль внешнего края крыла имеется ряд тёмных точек. У самок рисунок передних крыльев такой же, но они гораздо светлее, соломенного цвета. Задние крылья белые, с шелковистым блеском и короткой бахромой. Длина переднего крыла 10–16 мм; размах крыльев самца 15–17 </div>
+		<hr>
+</div>
+<div class="container">
+	<div class="aside_a"></div>
+	<div class="content_a"></div>
+</div>
 
-		<h1>Hello Beatifull World<h1/>
 	</body>
 
 	<script src="assets/javascript/main.js"></script>
