--- a/index.html
+++ b/index.html
@@ -22,9 +22,68 @@
 	<div class="aside_a"></div>
 	<div class="content_a"></div>
 </div>
+<hr>
+<hr>
+<header class="head">
+	<h2>Не можете выбрать какую единицу измерения выбрать?</h2>
+	<h3>Мы вам поможем!</h3>
+	<hr>
+</header>
+<section class="section_px">
+	<h3>px-иначе их кличут пикселями.</h3>
+	<p><b>Пиксели</b> - это базовая единица измерения и если вы не особо хотите заморачиваться, то сразу вам советую приобрести данную единицу измерения. <b>Вы спросите: почему именно пиксели?</b></p>
+	<ul>Ряд причин:
+		<li>Простые</li>
+		<li>Понятные</li>
+		<li>Браузер сам подтянет за вас масштаб, а вы тем временем можете попить пивка или выспаться</li>
 
+	</ul>
+
+	<p>Заказать немножко пикселей вы можете, кликнув по кнопке.
+	<input type="button" value="ЗАКАЗАТЬ ПИКСЕЛОФ"></p>
+	</section>
+	<hr>
+	<section>
+		<h3">Если вы "ОлдСкул", вам подойдёт pt.</h3>
+		<p><b>Пункт</b> - это 1/12 дюйма, весьма устаревший определитель масштаба, но досих-пор используемый <b class="mater">матёрыми</b> верстальщиками. Если вы одни из них или хотите им стать, то советуем приобрести их именно в нашем магазине по приемлимой цене. <input type="button" value="Пункты за 99$"></p>
+		<hr>
+	</section>
+	<section>
+		<h3>rem - отличный помощник для слабовидящих. </h3>
+		<p><b>rem</b> - это нечто иное, как очки для слепого. Если у вас плохое зрение и вы не можете прочитать текс, то вам помогут именно "ремы" с нашего оффициального магазина. Ну а если вы кодер и пишите сайты на подобии: Почта России, Пенсионный Фонд и т.д, мы выручим вас, сохранив ваши нервы при вёрстке. У вас бывало такое, что текст плохо виден, начинаете приближать масштаб и весь ваш сайт катится и скрипит, а текст так и не видно. Для того чтобы такого впредь не случалось, покупайте rem'ы. По предъявлению пенсионнного, скидка 30%! <input type="button" value="Заказать реп ;D"></p>
+		<hr>
+	</section>
+	<footer>
+		<table>
+			<tr>
+				<td>Информация о нас</td>
+				<td>Контакты</td>
+				<td>Условия использования</td>
+				<td>Время спать</td>
+			</tr>
+			<tr>
+				<td>Дозор</td>
+				<td>Властелин колец</td>
+				<td>гитхаб</td>
+				<td>гайд на майнкрафт</td>
+			</tr>
+			<tr>
+				<td>смотреть до конца</td>
+				<td>шок контент</td>
+				<td>ржака я под столом</td>
+				<td>мульты на гоблинском</td>
+			</tr>
+			<tr>
+				<td>выборы 20!8</td>
+				<td>я даун</td>
+				<td>предпоследняя колонка</td>
+				<td>последняя...</td>
+			</tr>
+		</table>
+		<p class="prava">Все права защищены. alekstar 2018©</p>
+	</footer>
 	</body>
 
-	<script src="assets/javascript/main.js"></script>
+	<script src="assets/javascript/main"></script>
 
 	</html>
