--- a/index.html
+++ b/index.html
@@ -7,81 +7,43 @@
 		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
-			<hr>
-<div class="main">
-	<div class="main_aside">После почти равных выборов 1800 года Томас Джефферсон постоянно увеличивал свою популярность. Американская торговля процветала благодаря временному прекращению революционных войн во Франции.</div>
-	<div class="main_content">Президентские выборы в США 1804 года были первыми президентскими выборами США после принятия Двенадцатой поправки к Конституции. Президент Томас Джефферсон, представлявший демократическо-республиканскую партию, легко одержал победу над Чарльзом Пинкни от федералистов. Джордж Клинтон был избран вице-президентом. Согласно Двенадцатой поправке выборщики от штатов должны были голосовать отдельно за президента и баллотирующегося с ним вице-президента.</div>
-		<hr>
-</div>
-<div>
-		<div class="aside">самки – 18–22 мм. Гусеницы последнего возраста достигают в длину 20–27 мм. Голова тёмно-жёлтая, переднегрудной щит жёлтый. Тело светло-жёлтое, после зимовки сероватое. Вдоль тела проходят 5 узких серо-коричневых полосок.</div>
-		<div class="content">Голова и грудь беловатые, с лёгким коричневым оттенком и небольшой примесью коричневых чешуек. У астраханской популяции усики бабочек самцов и самок без ресничек, короткие, не превышают длины половины переднего крыла[2]. Щупики относительно длинные, более или менее прямые, торчащие вперед. Передние крылья умеренной ширины, со слегка заострённой вершиной. У самцов они серовато-коричневые с четырьмя тёмными пятнышками наискось в средней части крыла. У некоторых бабочек эти пятнышки плохо заметны или отсутствуют. Вдоль внешнего края крыла имеется ряд тёмных точек. У самок рисунок передних крыльев такой же, но они гораздо светлее, соломенного цвета. Задние крылья белые, с шелковистым блеском и короткой бахромой. Длина переднего крыла 10–16 мм; размах крыльев самца 15–17 </div>
-		<hr>
-</div>
-<div class="container">
-	<div class="aside_a"></div>
-	<div class="content_a"></div>
-</div>
-<hr>
-<hr>
-<header class="head">
-	<h2>Не можете выбрать какую единицу измерения выбрать?</h2>
-	<h3>Мы вам поможем!</h3>
-	<hr>
-</header>
-<section class="section_px">
-	<h3>px-иначе их кличут пикселями.</h3>
-	<p><b>Пиксели</b> - это базовая единица измерения и если вы не особо хотите заморачиваться, то сразу вам советую приобрести данную единицу измерения. <b>Вы спросите: почему именно пиксели?</b></p>
-	<ul>Ряд причин:
-		<li>Простые</li>
-		<li>Понятные</li>
-		<li>Браузер сам подтянет за вас масштаб, а вы тем временем можете попить пивка или выспаться</li>
-
-	</ul>
-
-	<p>Заказать немножко пикселей вы можете, кликнув по кнопке.
-	<input type="button" value="ЗАКАЗАТЬ ПИКСЕЛОФ"></p>
-	</section>
-	<hr>
-	<section>
-		<h3">Если вы "ОлдСкул", вам подойдёт pt.</h3>
-		<p><b>Пункт</b> - это 1/12 дюйма, весьма устаревший определитель масштаба, но досих-пор используемый <b class="mater">матёрыми</b> верстальщиками. Если вы одни из них или хотите им стать, то советуем приобрести их именно в нашем магазине по приемлимой цене. <input type="button" value="Пункты за 99$"></p>
-		<hr>
-	</section>
-	<section>
-		<h3>rem - отличный помощник для слабовидящих. </h3>
-		<p><b>rem</b> - это нечто иное, как очки для слепого. Если у вас плохое зрение и вы не можете прочитать текс, то вам помогут именно "ремы" с нашего оффициального магазина. Ну а если вы кодер и пишите сайты на подобии: Почта России, Пенсионный Фонд и т.д, мы выручим вас, сохранив ваши нервы при вёрстке. У вас бывало такое, что текст плохо виден, начинаете приближать масштаб и весь ваш сайт катится и скрипит, а текст так и не видно. Для того чтобы такого впредь не случалось, покупайте rem'ы. По предъявлению пенсионнного, скидка 30%! <input type="button" value="Заказать реп ;D"></p>
-		<hr>
-	</section>
-	<footer>
-		<table>
-			<tr>
-				<td>Информация о нас</td>
-				<td>Контакты</td>
-				<td>Условия использования</td>
-				<td>Время спать</td>
-			</tr>
-			<tr>
-				<td>Дозор</td>
-				<td>Властелин колец</td>
-				<td>гитхаб</td>
-				<td>гайд на майнкрафт</td>
-			</tr>
-			<tr>
-				<td>смотреть до конца</td>
-				<td>шок контент</td>
-				<td>ржака я под столом</td>
-				<td>мульты на гоблинском</td>
-			</tr>
-			<tr>
-				<td>выборы 20!8</td>
-				<td>я даун</td>
-				<td>предпоследняя колонка</td>
-				<td>последняя...</td>
-			</tr>
-		</table>
-		<p class="prava">Все права защищены. alekstar 2018©</p>
-	</footer>
+		<div class="mine">
+		<header class="head">
+			<h1>Booble.com</h1>
+		</header>
+			<section class="content">
+				<h2 class="liter">Литература</h2>
+				<p>Чаще всего под литературой понимают художественную литературу, то есть литературу как вид искусства. Однако это понимание, сложившееся в эпоху романтизма, не следует прямо применять к культуре отдалённых от сегодняшнего дня эпох. Древние научные трактаты и религиозно-мифологические сочинения — такие, например, как «Теогония» Гесиода или «О природе вещей» Лукреция — с точки зрения современников не противопоставлялись, например, эпическим поэмам («Илиаде» Гомера или «Энеиде» Вергилия) как нехудожественная литература художественной. В России ещё в 1820-е годы критики сходились во мнении, что лучшие образцы русской прозы — «История Государства Российского» Карамзина и «Опыт теории налогов» Николая Тургенева[1]. Отделяя художественную литературу других периодов от литературы религиозной, философской, научной, публицистической, мы проецируем наши современные представления в прошлое.</p>
+			</section>
+			<aside class="menu">
+				<ul>
+					<h3>Меню</h3>
+						<li><a href="">Том</a></li>
+						<li><a href="">Главы</a></li>
+						<li><a href="">Подзаголовки</a></li>
+						<li><a href="">Цитаты</a></li>
+						<li><a href="">Песни</a></li>
+						<li><a href="">Скороговорки</a></li>
+						<li><a href="">Стихи</a></li>
+						<li><a href="">Каляда</a></li>
+						<li><a href="">Масленница</a></li>
+						<li><a href="">Летописи</a></li>
+						<li><a href="">Текст</a></li>
+						<li><a href="">Учебники</a></li>
+						<li><a href="">Билеты</a></li>
+						<li><a href="">Чеки</a></li>
+						<li><a href="">Адреса</a></li>
+				</ul>
+				
+			</aside>
+			<aside class="ad">
+				<h3>Продам дом на колёсах</h3>
+				<h4>Самая низкая цена</h4>
+				<h2>8-800-555-3535</h2>
+				<img src="http://www.bugaga.ru/uploads/posts/2016-06/1466664400_sobachi-budki-23.jpg" width="100">
+				<input type="button" value="Купить!">
+			</aside>
+		</div>
 	</body>
 
 	<script src="assets/javascript/main"></script>
