трёх-колоночный сайт

--- a/index.html
+++ b/index.html
@@ -7,45 +7,22 @@
 		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
-		<div class="mine">
-		<header class="head">
-			<h1>Booble.com</h1>
+		<header class="header">
+			<div class="container">
+				<h1>SuperHeader</h1>
+			</div>
 		</header>
-			<section class="content">
-				<h2 class="liter">Литература</h2>
-				<p>Чаще всего под литературой понимают художественную литературу, то есть литературу как вид искусства. Однако это понимание, сложившееся в эпоху романтизма, не следует прямо применять к культуре отдалённых от сегодняшнего дня эпох. Древние научные трактаты и религиозно-мифологические сочинения — такие, например, как «Теогония» Гесиода или «О природе вещей» Лукреция — с точки зрения современников не противопоставлялись, например, эпическим поэмам («Илиаде» Гомера или «Энеиде» Вергилия) как нехудожественная литература художественной. В России ещё в 1820-е годы критики сходились во мнении, что лучшие образцы русской прозы — «История Государства Российского» Карамзина и «Опыт теории налогов» Николая Тургенева[1]. Отделяя художественную литературу других периодов от литературы религиозной, философской, научной, публицистической, мы проецируем наши современные представления в прошлое.</p>
-			</section>
-			<aside class="menu">
-				<ul>
-					<h3>Меню</h3>
-						<li><a href="">Том</a></li>
-						<li><a href="">Главы</a></li>
-						<li><a href="">Подзаголовки</a></li>
-						<li><a href="">Цитаты</a></li>
-						<li><a href="">Песни</a></li>
-						<li><a href="">Скороговорки</a></li>
-						<li><a href="">Стихи</a></li>
-						<li><a href="">Каляда</a></li>
-						<li><a href="">Масленница</a></li>
-						<li><a href="">Летописи</a></li>
-						<li><a href="">Текст</a></li>
-						<li><a href="">Учебники</a></li>
-						<li><a href="">Билеты</a></li>
-						<li><a href="">Чеки</a></li>
-						<li><a href="">Адреса</a></li>
-				</ul>
-				
-			</aside>
-			<aside class="ad">
-				<h3>Продам дом на колёсах</h3>
-				<h4>Самая низкая цена</h4>
-				<h2>8-800-555-3535</h2>
-				<img src="http://www.bugaga.ru/uploads/posts/2016-06/1466664400_sobachi-budki-23.jpg" width="100">
-				<input type="button" value="Купить!">
-			</aside>
-		</div>
+		<main class="main">
+			<div class="container">
+					<aside class="aside_right">Правая колонка</aside>
+					<aside class="aside_left">Левая колонка</aside>
+					<div class="content">Качественный контент</div>
+			</div>
+		</main>
+		<footer class="footer">
+			<div class="container">SUPER FOOTER</div>
+		</footer>
 	</body>
-
 	<script src="assets/javascript/main"></script>
 
 	</html>
