--- a/index.html
+++ b/index.html
@@ -7,21 +7,48 @@
 		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 	</head>
 	<body>
-		<header class="header">
+		<div class="section">
 			<div class="container">
-				<h1>SuperHeader</h1>
+				<div class="row">
+					<div class="column1 col-xs-6"></div>
+					<div class="column2 col-xs-6"></div>
+				</div>
 			</div>
-		</header>
-		<main class="main">
+		</div>
+		<hr>
+		<div class="section">
 			<div class="container">
-					<aside class="aside_right">Правая колонка</aside>
-					<aside class="aside_left">Левая колонка</aside>
-					<div class="content">Качественный контент</div>
+				<div class="row">
+					<div class="column3 col-xs-4"></div>
+					<div class="column4 col-xs-4"></div>
+					<div class="column5 col-xs-4"></div>
+				</div>
 			</div>
-		</main>
-		<footer class="footer">
-			<div class="container">SUPER FOOTER</div>
-		</footer>
+		</div>
+		<hr>
+				<div class="section">
+			<div class="container">
+				<div class="row">
+					<div class="column6 col-xs-3"></div>
+					<div class="column7 col-xs-3"></div>
+					<div class="column8 col-xs-3"></div>
+					<div class="column9 col-xs-3"></div>
+				</div>
+			</div>
+		</div>
+		<hr>
+		<div class="section">
+			<div class="container">
+				<div class="row">
+					<div class="column10 col-xs-2"></div>
+					<div class="column11 col-xs-2"></div>
+					<div class="column12 col-xs-2"></div>
+					<div class="column13 col-xs-2"></div>
+					<div class="column14 col-xs-2"></div>
+					<div class="column15 col-xs-2"></div>
+				</div>
+			</div>
+		</div>
 	</body>
 	<script src="assets/javascript/main"></script>
 
