--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
 			<div class="parent_column center"></div>
 		</div>
 		<hr>
-		<div class="maket">
+		<div class="main">
 			<div class="header"></div>
 			<main class="container">Главная особенность фиксировано позиционированных элементов в том, что они могут перекрывать другие блоки и строки страницы. При скроллинге блок с Position: fixed будет будто бы оставаться на месте, не исчезая с экрана. Это полезно, если вам нужно сделать навигацию или аналогичный элемент, к которому пользователь всегда должен иметь доступ. Фиксированное позиционирование также применяется, если нужно разместить кнопку быстрого скроллинга в определенную часть страницы. CSS Position: relative Использование этого свойства называется относительным позиционированием. Если задать элементу свойство Position: relative, тот останется на своем месте. На первый взгляд, ничего особенного не произойдет, но все измениться, если дополнительно использовать свойства right/left и top/bottom. С их помощью можно управлять перемещением компонента относительно его местоположения. На том месте, где блок или строка были раньше, окажется пустое пространство – другие элементы останутся на своих положениях, не обращая внимания на освободившееся место. Яндекс.Директ Чемпионат России по футболу Результаты матчей и турнирная таблица 18+ yandex.ru ВидеоМонтаж - новый видеоредактор 50+ форматов видео, нарезка и соединение видео, спецэффекты, запись DVD! 18+ amssoft.ru При перемещении компонент никак не влияет на положение окружающих частей страницы. Они так и останутся на своих местах, хотя относительно позиционированный блок может их перекрыть. Само по себе свойство используется редко. Обычно его применяют в сочетании со следующим вариантом. Абсолютное позиционирование Один из самых интересных и наиболее часто используемых вариантов. При использовании свойства Position со значением absolute положение компонента страницы будет высчитываться относительно окна браузера. Прочие элементы (не являющиеся абсолютно позиционированными) словно «забудут» о существовании «собрата» с Position: absolute и займут его место в потоке. Казалось бы, все точно так же, как в случае с Position: fixed, но есть и серьезные различия. - Читайте подробнее на FB.ru: http://fb.ru/article/318773/css-position-primeryi</main>
 			<div class="footer"></div>
 		</div>
-
+						
 	</body>
 	<script src="assets/javascript/main"></script>
 
