--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 	<html lang="en">
 	<head>
 		<meta charset="UTF-8">
-		<title>Hello</title>
+		<title>Alekscar.wtf</title>
 		<link rel="stylesheet" href="assets/styles/main.css"  type="text/css"/>
 		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 	</head>
 	<body>
 		<hr>
@@ -28,6 +31,7 @@
 		<div class="main">
 			<div class="header"></div>
 			<main class="container">
+				<h1>Fonts Family Class</h1>
 				Главная особенность фиксировано позиционированных элементов в том, что они могут перекрывать другие блоки и строки страницы. При скроллинге блок с Position: fixed будет будто бы оставаться на месте, не исчезая с экрана. Это полезно, если вам нужно сделать навигацию или аналогичный элемент, к которому пользователь всегда должен иметь доступ. Фиксированное позиционирование также применяется, если нужно разместить кнопку быстрого скроллинга в определенную часть страницы. CSS Position: relative Использование этого свойства называется относительным позиционированием. Если задать элементу свойство Position: relative, тот останется на своем месте. На первый взгляд, ничего особенного не произойдет, но все измениться, если дополнительно использовать свойства right/left и top/bottom. С их помощью можно управлять перемещением компонента относительно его местоположения. На том месте, где блок или строка были раньше, окажется пустое пространство – другие элементы останутся на своих положениях, не обращая внимания на освободившееся место. Яндекс.Директ Чемпионат России по футболу Результаты матчей и турнирная таблица 18+ yandex.ru ВидеоМонтаж - новый видеоредактор 50+ форматов видео, нарезка и соединение видео, спецэффекты, запись DVD! 18+ amssoft.ru При перемещении компонент никак не влияет на положение окружающих частей страницы. Они так и останутся на своих местах, хотя относительно позиционированный блок может их перекрыть. Само по себе свойство используется редко. Обычно его применяют в сочетании со следующим вариантом. Абсолютное позиционирование Один из самых интересных и наиболее часто используемых вариантов. При использовании свойства Position со значением absolute положение компонента страницы будет высчитываться относительно окна браузера. Прочие элементы (не являющиеся абсолютно позиционированными) словно «забудут» о существовании «собрата» с Position: absolute и займут его место в потоке. Казалось бы, все точно так же, как в случае с Position: fixed, но есть и серьезные различия. - Читайте подробнее на FB.ru: http://fb.ru/article/318773/css-position-primeryi
 			</main>
 			<div class="footer"></div>		
