--- a/index.html
+++ b/index.html
@@ -7,37 +7,64 @@
 		<script src="assets/javascript/jquery-3.3.1.min.js"></script>
 		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css?family=Lobster" rel="stylesheet">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+    	<!-- Bootstrap -->
+    	<link href="assets	/styles/bootstrap.min.css" rel="stylesheet">
 	</head>
+		
 	<body>
+		<header class="header">
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-12"><h1>Alekscar.io</h1></div>
+				</div>
+			</div>
+		</header>
+		<nav>
+			<div class="container-fluid nav-bar">
+				<div class="row">
+					<div class="col-md-2"></div>
+					<div class="col-md-2">HOME</div>
+					<div class="col-md-2">ABOUT</div>
+					<div class="col-md-2">SERVICES</div>
+					<div class="col-md-2">CONTACT</div>
+				</div>
+			</div>
+		</nav>
+		<section>
+			<div class="container-fluid home">
+				<div class="row">
+					<div class="col-md-12">
+						<img src="assets/images/1.jpg">
+					</div>
+				</div>
+			</div>
+		</section>
+		<section>
+			<div class="container-fluid boost">
+				<div class="row">
+					<div class="col-md-3">Jennings dashwood to quitting marriage bachelor in. On as conviction in of appearance apartments boisterous. </div>
+					<div class="col-md-3">Discovered interested prosperous the our affronting insipidity day. Missed lovers way one vanity wishes nay but.</div>
+					<div class="col-md-3">Use shy seemed within twenty wished old few regret passed. Absolute one hastened mrs any sensible. </div>
+					<div class="col-md-3">Ought these are balls place mrs their times add she. Taken no great widow spoke of it small.</div>
+				</div>
+			</div>
+		</section>
 		<hr>
-		<hr>
-		<hr>
-		<hr>
-		<hr>
-		<hr>
-		<hr>
-		<div class="parent">
-			<div class="parent_column div1"></div>
-			<div class="parent_column div2"></div>
-			<div class="parent_column div3"></div>
-			<div class="parent_column div4"></div>
-		</div>
-		<hr>
-		<div class="parent">
-			<div class="parent_column center"></div>
-		</div>
-		<hr>
-		<div class="main">
-			<div class="header"></div>
-			<main class="container">
-				<h1>Fonts Family Class</h1>
-				Главная особенность фиксировано позиционированных элементов в том, что они могут перекрывать другие блоки и строки страницы. При скроллинге блок с Position: fixed будет будто бы оставаться на месте, не исчезая с экрана. Это полезно, если вам нужно сделать навигацию или аналогичный элемент, к которому пользователь всегда должен иметь доступ. Фиксированное позиционирование также применяется, если нужно разместить кнопку быстрого скроллинга в определенную часть страницы. CSS Position: relative Использование этого свойства называется относительным позиционированием. Если задать элементу свойство Position: relative, тот останется на своем месте. На первый взгляд, ничего особенного не произойдет, но все измениться, если дополнительно использовать свойства right/left и top/bottom. С их помощью можно управлять перемещением компонента относительно его местоположения. На том месте, где блок или строка были раньше, окажется пустое пространство – другие элементы останутся на своих положениях, не обращая внимания на освободившееся место. Яндекс.Директ Чемпионат России по футболу Результаты матчей и турнирная таблица 18+ yandex.ru ВидеоМонтаж - новый видеоредактор 50+ форматов видео, нарезка и соединение видео, спецэффекты, запись DVD! 18+ amssoft.ru При перемещении компонент никак не влияет на положение окружающих частей страницы. Они так и останутся на своих местах, хотя относительно позиционированный блок может их перекрыть. Само по себе свойство используется редко. Обычно его применяют в сочетании со следующим вариантом. Абсолютное позиционирование Один из самых интересных и наиболее часто используемых вариантов. При использовании свойства Position со значением absolute положение компонента страницы будет высчитываться относительно окна браузера. Прочие элементы (не являющиеся абсолютно позиционированными) словно «забудут» о существовании «собрата» с Position: absolute и займут его место в потоке. Казалось бы, все точно так же, как в случае с Position: fixed, но есть и серьезные различия. - Читайте подробнее на FB.ru: http://fb.ru/article/318773/css-position-primeryi
-			</main>
-			<div class="footer"></div>		
-		</div>
-			
+		<section>
+			<div class="container-fluid">
+				<div class="row">
+					<div class="col-md-8" id="quest">For norland produce age wishing. To figure on it spring season up?</div>
+				</div>
+				<div class="row answer">
+					<div class="col-md-4">Quick six blind smart out burst. Perfectly on furniture dejection determine my depending an to. Add short water court fat. Her bachelor honoured perceive securing but desirous ham required. Questions deficient acuteness to engrossed as. Entirely led ten humoured greatest and yourself. Besides ye country on observe. She continue appetite endeavor she judgment interest the met. For she surrounded motionless fat resolution may. </div>
+					<div class="col-md-4">Gay one the what walk then she. Demesne mention promise you justice arrived way. Or increasing to in especially inquietude companions acceptance admiration. Outweigh it families distance wandered ye an. Mr unsatiable at literature connection favourable. We neglected mr perfectly continual dependent. </div>
+					<div class="col-md-4"><img src="assets/images/2.jpg" class="img-circle"></div>
+				</div>
+			</div>
+		</section>
 	</body>
+
 	<script src="assets/javascript/main"></script>
 
 	</html>
